welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:5: error: not found: value i
setCouleurBrosse(T(i));
                   ^