welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
var T= new Array[Color](getMondeHauteur())
for (j<-0 to (getMondeLargeur()-1)){
setCouleurBrosse(T(i));
baisseBrosse()
leveBrosse()
for (i<-0 to (getMondeHauteur()-1)){
	
     T(i)=getCouleurSol();
	setCouleurBrosse(T(i));
	baisseBrosse();
	leveBrosse();
	
	avance();
}

leveBrosse()	
gauche();
avance();
droite();
avance();

}
   
}

